Create bruker fungerer nå

--- a/Views/Brukere/Create.cshtml
+++ b/Views/Brukere/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Opprett bruker";
 }
 
-<h2>Opprett bruker</h2>
+<h2>Opprett bruker.</h2>
 
 <form asp-action="Create" method="post">
     <div class="form-group">
