--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,14 +27,16 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-    <a asp-controller="Brukere" asp-action="Index">Brukere</a>
+    <a  class="nav-link text-dark" asp-controller="Brukere" asp-action="Index">Brukere</a>
 
 </li>
 <li class="nav-item">
-    <a class="nav-link text-dark" asp-controller="Brukere" asp-action="Create">Skap</a>
+    <a class="nav-link text-dark" asp-controller="Home" asp-action="Spill">Spill</a>
 </li>
+<li class="nav-item">
+<a class="nav-link text-dark" asp-controller="Brukere" asp-action="Top5">Vis Top 5 Brukere</a>
 
-                    </ul>
+</li>                 </ul>
                 </div>
             </div>
         </nav>
